add test for payment rental and equipment
